--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -1,71 +1,90 @@
 <!DOCTYPE html>
 <html class="h-100" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>MoPA</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
+<head>
+    <title>MoPA</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <link th:href="@{/vendors/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
-        <link th:href="@{/vendors/fontawesome/css/all.min.css}" rel="stylesheet">
-    </head>
+    <link th:href="@{/vendors/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/vendors/fontawesome/css/all.min.css}" rel="stylesheet">
+</head>
 
-    <body class="d-flex flex-column h-100">
-        <header>
-            <div class="px-3 py-2 bg-dark text-white">
-                <div class="container">
-                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                        <a th:href="@{/}" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                            <h2>Ministry Of Public Administration</h2>
-                        </a>
+<body class="d-flex flex-column h-100">
+<header>
+    <div class="px-3 py-2 bg-light text-dark">
+        <div class="container">
+            <div class="card-body">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                    <a th:href="@{/}"
+                       class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-dark text-decoration-none">
+                        <h2>Ministry Of Public Administration</h2>
+                    </a>
 
-                        <div class="text-center" sec:authorize="isAuthenticated()">
-                            Welcome <b><span sec:authentication="name">Username</span></b>
-                        </div>
-
-                        <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-                            <li>
-                                <a th:href="@{/}" class="nav-link text-white text-center">
-                                    <i class="fa fa-home d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
-                                    Home
-                                </a>
-                            </li>
-                        </ul>
-                        <ul>
-                            <li>
-                                <form th:action="@{/logout}" method="post">
-                                    <input type="submit" value="Logout" />
-                                </form>
-                            </li>
-                        </ul>
+                    <div class="text-center" sec:authorize="isAuthenticated()">
+                        Welcome <b><span sec:authentication="name">Username</span></b>
                     </div>
+
+                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center ms-auto my-md-0 text-small">
+
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                =
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+
+                                <a th:href="@{/}" class="dropdown-item d-flex">
+                                    <i class="fa fa-home fa-lg mx-auto mb-0 pt-2" style="font-size: 16px" aria-hidden="true"></i>
+                                    <span>Home</span></a>
+                                <a class="dropdown-item">
+                                    <form th:action="@{/logout}" method="post">
+                                        <input type="submit" value="Logout"/>
+                                    </form>
+                                </a>
+                            </div>
+                        </div>
+                    </ul>
                 </div>
             </div>
-        </header>
+        </div>
+    </div>
+</header>
 
-        <main class="flex-shrink-0">
-            <div class="container">
-                <div class="py-4" layout:fragment="content"></div>
-            </div>
-        </main>
+<main class="flex-shrink-0">
+    <div class="container">
+        <div class="py-4" layout:fragment="content"></div>
+    </div>
+</main>
 
-        <footer class="footer mt-auto py-3 bg-dark">
-            <div class="container">
-            </div>
-        </footer>
+<footer class="footer mt-auto py-3 bg-dark">
+    <div class="container">
+    </div>
+</footer>
 
-        <script th:src="@{/vendors/jquery/jquery.min.js}" type="text/javascript"></script>
-        <script th:src="@{/vendors/jquery-mask/dist/jquery.mask.min.js}" type="text/javascript"></script>
-        <script th:src="@{/vendors/bootstrap/js/bootstrap.bundle.min.js}" type="text/javascript"></script>
-        <script type="text/javascript">
-            $(document).ready(function() {
-                $(".zipCode").mask("00000-000");
-                $(".birthdayDate").mask("00/00/0000");
-            });
-        </script>
-        <th:block layout:fragment="scripts"></th:block>
-    </body>
+<script th:src="@{/vendors/jquery/jquery.min.js}" type="text/javascript"></script>
+<script th:src="@{/vendors/jquery-mask/dist/jquery.mask.min.js}" type="text/javascript"></script>
+<script th:src="@{/vendors/bootstrap/js/bootstrap.bundle.min.js}" type="text/javascript"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $(".zipCode").mask("00000-000");
+        $(".birthdayDate").mask("00/00/0000");
+    });
+</script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<th:block layout:fragment="scripts"></th:block>
+</body>
 </html>
